fixed scrollbar and deleted unnecessary css

--- a/src/app/components/fairChain/fairChain.component.scss
+++ b/src/app/components/fairChain/fairChain.component.scss
@@ -1,15 +1,16 @@
 .application-head {
-    height: 6%;
-    width: 100%;
+    height: 5%;
+    width: 99%;
     margin: 0px;
-    padding:0.5%;
+    padding-left:0.5%;
+    padding-right:0.5%;
     padding-bottom: 0%;
+    padding-top: 0.5%;
 
     .buttonsToolbarAbove{
         font-size:20px;
         color: black;
-        padding-left: 7px;
-      }
+    }
       
     #fileToImport{
         display: none;
@@ -20,33 +21,6 @@
     }
 }
 
-    .tool.active {
-      background-color: #00c3ff;
-    }
-    
-  .canvas {
-    background-color: #f0fcfc;
-    height: 100%;
-    width: 80%;
-    float: left;
-    margin: 0px;
-    padding: 0px;
-
-    // Initializes the interaction area properties
-    .graph {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-  .toolbar-options {
-    height: 100%;
-    width: 10%;
-    float: left;
-  }
 .application-body {
     height: 94%;
     width: 100%;
@@ -105,7 +79,7 @@
     .canvas {
         background-color: #f0fcfc;
         height: 100%;
-        width: 84%;
+        width: 80%;
         float:left;
         margin: 0px;
         padding:0px;
@@ -136,10 +110,12 @@
     
     .toolbar-options {
         height: 100%;
-        width: 10%;
+        width: 12%;
         float: left;
         margin: 0px;
         padding: 0px;
+        padding-right: 1%;
+        padding-left: 1%;
     
         .option-label {
             font-size:20px;
@@ -157,6 +133,7 @@
             width: 100%;
             padding-left: 5px;
             background-color: #ffffff;
+            font-size:20px;
         }
         .option-button.active {
             background-color: #00ccff;
@@ -177,6 +154,7 @@
         .option-label-metadata {
             display: flex;
             justify-content: center;
+            font-size:20px;
         }
 
         .drawer-container{
